--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,14 @@ header{
     background-color: #000;
     margin: 50px auto;
 }
+
+.ms_about{
+    background-color: #19BC9B;
+}
+
+.ms_download{
+    background-color: #19BC9B;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
